# algorithms

./: README.md  a.out  cfitches.txt  chellenge  chellenge.cpp  lab1  lab1.cpp  prog  test  test.cpp
 lab3/: a.out  lab3  lab3.cpp  mew  mew.cpp  task6.cpp
 lab3/a.out.dSYM/Contents/Resources/DWARF/: a.out
 lab3/lab3.dSYM/Contents/Resources/DWARF/: lab3
 lab3/mew.dSYM/Contents/: Info.plist
 lab3/mew.dSYM/Contents/Resources/DWARF/: mew
 lab3/mew.dSYM/Contents/Resources/Relocations/aarch64/: mew.yml
1sem/ lab3/: mew.cpp
1sem/ lab3/a.out.dSYM/Contents/Resources/DWARF/: a.out
1sem/ lab3/lab3.dSYM/Contents/Resources/DWARF/: lab3
1sem/ lab3/lab3.dSYM/Contents/Resources/Relocations/aarch64/: lab3.yml
1sem/exam/: program 20.17.56  test.cpp  variant.cpp
1sem/lab1/: lab1.cpp
1sem/lab2/: 1.h  lab2.cpp
1sem/lab2/a.out.dSYM/Contents/Resources/DWARF/: a.out
1sem/lab2/release.out.dSYM/Contents/: Info.plist
1sem/lab4/: lab4.cpp  other.h  program
1sem/lab4/lab4.dSYM/Contents/Resources/Relocations/aarch64/: lab4.yml
1sem/lab4/test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
1sem/lab5/: lab5.cpp  matrix.h  other.cpp  other.h  program
1sem/lab6/: helper.h  lab6.cpp  library.cpp  library.h  program  test.txt
2sem/: Git 1.md  labs.md  ~$task4.doc
2sem/errors_in_cpp/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc
2sem/lab1/: Makefile  barrel.cpp  barrel.hpp  lab1.cpp  matrix.cpp  matrix.hpp  rect.cpp  rect.hpp  test.cpp  text_wrapper.hpp
2sem/lab1/src/: lab1.cpp  matrix.cpp  matrix.hpp  my_string.cpp  my_string.hpp  rect.cpp  rect.hpp  text_wrapper.cpp  text_wrapper.hpp
2sem/lab1/tests/: test_bounding_rect.cpp  test_rect_basic_methods.cpp  test_rect_operations.cpp  test_rect_properties.cpp
2sem/lab2/: CMakeLists.txt  t_bf33.txt  t_new_b32f.txt  t_new_rf.txt  t_t.txt  t_wint_rf.txt
2sem/lab2/src/: base_file.cpp  base_file.hpp  lab2.cpp  rle  rle.cpp  test.txt
2sem/lab2/string_lib/: CMakeLists.txt
2sem/lab2/string_lib/src/: my_string.cpp  my_string.hpp
2sem/lab2/tests/: test_base32_file.cpp  test_base_file.cpp  test_helper.cpp  test_helper.hpp  test_rle_file.cpp
2sem/lab3/: CMakeLists.txt  lab3.cpp  my_string.cpp  worker_db.hpp
2sem/lab3/.github/workflows/: ci.yml
2sem/lab3/src/: CMakeLists.txt  base_file.cpp  base_file.hpp  bool_array.cpp  bool_array.hpp  lab3.cpp  matrix.cpp  matrix.hpp  my_string.hpp  notification.cpp  notification.hpp  notification_priority_queue.cpp  notification_priority_queue.hpp  notification_queue.cpp  notification_queue.hpp  worker_db.cpp  worker_db.hpp
2sem/lab3/tests/: CMakeLists.txt  test_bool_array.cpp  test_matrix.cpp  test_my_string.cpp  test_notification.cpp  test_worker_db.cpp
2sem/lab4/: CmakeLists.txt  list.txt  task4.doc
2sem/lab4/explicit_lib/: CMakeLists.txt  cat_func.cpp  cat_func.hpp
2sem/lab4/implicit_lib/: CMakeLists.txt  circle_func.cpp  circle_func.hpp
2sem/lab4/src/: list.cpp  list.hpp  main.cpp  other.cpp  other.hpp
a.out.dSYM/Contents/Resources/DWARF/: a.out
chellenge.dSYM/Contents/: Info.plist
chellenge.dSYM/Contents/Resources/DWARF/: chellenge
chellenge.dSYM/Contents/Resources/Relocations/aarch64/: chellenge.yml
lab1/: a.out  lab1.cpp
lab1.dSYM/Contents/Resources/DWARF/: lab1
lab1.dSYM/Contents/Resources/Relocations/aarch64/: lab1.yml
lab2/: 2.h  a.out  cfitches.txt  lab2  lab2.cpp  leetcode.cpp  release.out  test.cpp  test.py
lab2/a.out.dSYM/Contents/Resources/DWARF/: a.out
lab2/lab2.dSYM/Contents/Resources/DWARF/: lab2
lab2/lab2.dSYM/Contents/Resources/Relocations/aarch64/: lab2.yml
lab2/release.out.dSYM/Contents/Resources/DWARF/: release.out
lab2/release.out.dSYM/Contents/Resources/Relocations/aarch64/: release.out.yml
lab4/: a.out  lab4  lab4.cpp  other.cpp  other.h  program  test.cpp  tools.txt
lab4/lab4.dSYM/Contents/Resources/DWARF/: lab4
lab4/test.dSYM/Contents/Resources/DWARF/: test
lab5/: lab5.cpp  matrix.cpp  other.cpp  other.h  program
lab6/: book.cpp  book.h  file.txt  helper.cpp  helper.h  lab6.cpp  library.cpp  library.h  other.cpp  program
other/: cfitches.txt
